# cgproj

./: .gitignore  CMakeLists.txt  build.bat  run.sh
src/: MyApp.cpp  MyApp.h  SDL_GLDebugMessageCallback.cpp  SDL_GLDebugMessageCallback.h  main.cpp
